--- a/index.html
+++ b/index.html
@@ -88,9 +88,8 @@
 <body>
 	<div class="row">
 		<div class="col-xs-12">
-			<h1>Top 100 California Companies by Wage Claims</h1>
-			<p>Workers that believe they were unpaid for hours worked can make a claim with the California Department of Labor. This list is the top 100 California companies ranked by total amount awarded by the state. Only claims that resulted in an award are listed
-				here.
+			<h1>Preferred citations for astronomy software</h1>
+			<p>Spreadsheet created by Alice Allen, wrapped in TableTop by James Guillochon. To edit this table, edit the Google Spreadsheet that it pulls its data from (available <a href="https://docs.google.com/spreadsheets/d/1eA7GZc5eWM6zo7Cb_86eHBZRFS1ZFleKKn3kBtYsHzc/edit?usp=sharing">here</a>).
 			</p>
 		</div>
 	</div>
@@ -104,16 +103,13 @@
 	<div class="row">
 		<div class="col-xs-12">
 			<div class="footnotes">
-				<h4>Notes</h4>
-				<p>The list total award amount does not necessarily mean that amount was paid out to the worker. A lack of enforcement in the wage dispute system means many workers never see any of their award.</p>
+				<h4>Table will take a second to load...</h4>
 			</div>
 		</div>
 
 		<div class="col-xs-12">
 			<div class="footer">
-				<p>Source: California Department of Labor</a>
-				</p>
-				<p>Credit: <a href="http://www.twitter.com/scottpham">Scott Pham</a>/Reveal</p>
+				<p>Table powered by <a href="https://github.com/scottpham/tabletop-to-datatables">TableTop to Datatables</a>, maintained by <a href="http://www.twitter.com/scottpham">Scott Pham</a></p>
 			</div>
 		</div>
 
